--- a/Obsidian Notes/Masters Notes/Meeting Minutes/2024-W07.md
+++ b/Obsidian Notes/Masters Notes/Meeting Minutes/2024-W07.md
@@ -1,5 +1,8 @@
 # Notes
-- 
+- Indy papers are a good starrt
+- Read Ben draft
+- golf shirt instead of hoody?
 
 # Tasks #todo 
-- [ ] 
+- [ ] Read indy papers
+- [ ] talk to maddy about t-shirt
