--- a/Obsidian Notes/Masters Notes/To do/24-02-14.md
+++ b/Obsidian Notes/Masters Notes/To do/24-02-14.md
@@ -2,6 +2,6 @@
 date: 2024-02-14
 ---
 # Day planner #todo 
-- [x] Email about Demi'ing on friday
+- [x] Email about Demi'ing on friday ✅ 2024-02-14
 - [ ] Continue with follow the gap algoritm  [start:: 2024-02-12]
 - [ ] Find out about changing seeding for CTCT  [due:: 2024-02-22]
