--- a/Obsidian Notes/Masters Notes/To do/24-02-14.md
+++ b/Obsidian Notes/Masters Notes/To do/24-02-14.md
@@ -5,3 +5,4 @@ date: 2024-02-14
 - [x] Email about Demi'ing on friday ✅ 2024-02-14
 - [ ] Continue with follow the gap algoritm  [start:: 2024-02-12]
 - [ ] Find out about changing seeding for CTCT  [due:: 2024-02-22]
+- [ ] ggg
