--- a/Obsidian Notes/Masters Notes/To do/24-02-14.md
+++ b/Obsidian Notes/Masters Notes/To do/24-02-14.md
@@ -6,3 +6,4 @@ date: 2024-02-14
 - [ ] Continue with follow the gap algoritm  [start:: 2024-02-12]
 - [ ] Find out about changing seeding for CTCT  [due:: 2024-02-22]
 - [ ] ggg
+- [ ] sdfghj
